--- a/templates/projects.html
+++ b/templates/projects.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
-    <title>Venkatesh Projects</title>
+    <title>Pratik Projects</title>
     <!-- Favicon  -->
   <link rel="shortcut icon" type="image/png" href="static/favicon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
